--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,12 +8,13 @@
   --primary: #172b4d;
   --h-color: #3a4a42;
   --secondary: #36b37e;
+  --secondary-btn: #36B37F;
   --weight: bold;
-  --white: #ffff;
+  --background: #ebf0ee;
 }
 
 body {
-  width: 100vw;
+  width: 100%;
   min-height: 100vh;
   background-image: url('../images/header-illsutration-mobile@2x.png');
   background-repeat: no-repeat;
@@ -91,11 +92,15 @@ main {
 .works-section {
   padding: 0 24px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
 }
 
 .works-section-title h2 {
   min-width: 327px;
-  width: 70%;
+  width: 327;
   margin: 0 auto;
   font-size: 40px;
   line-height: 52px;
@@ -104,7 +109,7 @@ main {
   /* background-color: brown; */
   /* margin-bottom: calc(24px + 62px); */
 }
-.works-section-title h2::after{
+.works-section-title h2::after {
   content: " ";
   display: block;
   width: 48px;
@@ -112,3 +117,84 @@ main {
   margin: 24px auto 62px;
   background-color: var(--secondary);
 }
+.card-container {
+  display: grid;
+  width: auto;
+  grid-gap: 24px;
+  grid-template-columns: repeat(1, 1fr);
+  /* grid-auto-rows: minmax(474px, auto); */
+  grid-auto-rows: 474px;
+  justify-content: center;
+  align-items: center;
+  /* margin: 0 auto; */
+  /* background-color: rgb(180, 180, 180); */
+}
+.card {
+  min-width: 327px;
+  width: 90%;
+  max-height: 474px;
+  border: 1px solid #d0d9d4;
+  border-radius: 8px;
+  justify-self: center;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  /* background-color: #75867f; */
+  align-items: center;
+  
+}
+
+.card img {
+  background-color: #ebf0ee;
+  background: var(--background);
+  height: 252px;
+  min-width: 100%;
+}
+
+.card h3 {
+  padding: 16px;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 32px;
+  color: #3a4a42;
+}
+
+.card img {
+  background: var(--background);
+  height: 252px;
+  min-width: 100%;
+}
+
+.card ul {
+  display: flex;
+  /* justify-content: flex-start; */
+  list-style: none;
+}
+
+.card ul li {
+  max-height: 32px;
+  font-weight:600;
+  font-size: 12px;
+  line-height: 16px;
+  border-radius: 4px;
+  padding: 8px 12px;
+  margin: 0 4px;
+  background: var(--background);
+}
+
+.card button {
+  margin: 29px 0 24px;
+  height: 48px;
+  width: 122px;
+  padding: 12px;
+  font-size: 17px;
+  line-height: 24px;
+  font-weight: 500;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  background-color: var(--secondary-btn);
+}
+
+/* Middle-section */ 
+
