--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,6 +11,7 @@
   --secondary-btn: #36B37F;
   --weight: bold;
   --background: #ebf0ee;
+  overflow-x: hidden; 
 }
 
 body {
@@ -18,9 +19,10 @@ body {
   min-height: 100vh;
   background-image: url('../images/header-illsutration-mobile@2x.png');
   background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
+  background-size: contain;
+  background-position: center top;
   font-family: Arial, Helvetica, sans-serif;
+  overflow-x: hidden; 
 }
 
 .main-header {
@@ -124,17 +126,16 @@ main {
   width: auto;
   grid-gap: 24px;
   grid-template-columns: repeat(1, 1fr);
-  /* grid-auto-rows: minmax(474px, auto); */
-  grid-auto-rows: 474px;
+  grid-auto-rows: minmax(474px, auto);
   justify-content: center;
   align-items: center;
   /* margin: 0 auto; */
   /* background-color: rgb(180, 180, 180); */
 }
 
-.card {
+.card-container .card {
   min-width: 327px;
-  width: 90%;
+  /* width: 70%; */
   max-height: 474px;
   border: 1px solid #d0d9d4;
   border-radius: 8px;
@@ -167,10 +168,15 @@ main {
   min-width: 100%;
 }
 
-.card ul {
+.card ul, .cards ul{
+  width: 100%;
   display: flex;
-  /* justify-content: flex-start; */
+  align-items: flex-start;
+  justify-content: center;
+  flex-wrap: wrap;
+  text-align: center;
   list-style: none;
+  /* background-color: #36b37e; */
 }
 
 .card ul li {
@@ -181,6 +187,7 @@ main {
   border-radius: 4px;
   padding: 8px 12px;
   margin: 0 4px;
+  color: #3a4a42;
   background: var(--background);
 }
 
@@ -200,3 +207,127 @@ main {
 
 /* About myself */ 
 
+.about-section {
+  padding: 0px 0px 59px;
+  /* background: #172b4d; */
+}
+
+.about-section .about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  background-image: url('../images/illustration-\ about\ me-\ mobile@2x.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center left;
+}
+
+.about h2 {
+  min-width: 100%;
+  margin: 0 auto;
+  padding: 68px 0 48px;
+  font-size: 40px;
+  line-height: 52px;
+  font-weight: var(--weight);
+  color: var(--primary);
+  background-image: url('../images/Mask\ Group@2x.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center right;
+
+}
+
+.about p {
+  min-width: 351px;
+  width: 80%;
+  font-size: 20px;
+  line-height: 32px;
+  letter-spacing: 0em;
+  font-weight: 400;
+  color: #42526e;
+  padding: 0 28px 24px;;
+}
+
+.about button {
+  height: 48px;
+  width: 159px;
+  font-size: 17px;
+  line-height: 24px;
+  font-weight: 500;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  background-color: var(--secondary-btn);
+  letter-spacing: 0.03em;
+  padding: 12px;
+  margin-bottom: 10px;
+}
+
+.card-wrapper{
+  margin-top: 49px;
+  display: grid;
+  width: auto;
+  grid-gap: 24px;
+  grid-template-columns: repeat(1, 1fr);
+  grid-auto-rows: 352px;
+  justify-content: center;
+  align-items: center;
+  padding: 0 24px;
+
+  /* text-align: center; */
+  /* margin: 0 auto; */
+  /* background-color: rgb(180, 180, 180); */
+}
+
+.card-wrapper .cards {
+  /* max-width: 327px; */
+  width: 327px;
+  height: 352px;
+  border: 1px solid #c1c7d0;
+  border-radius: 8px;
+  justify-self: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background: var(--background);
+  justify-content: center;
+}
+
+.cards img {
+  width: 140px;
+  height: 140px;
+  /* margin: 30px 0 24px; */
+}
+.cards img.first {
+  /* margin: 10px 0 34px; */
+}
+
+.cards h3 {
+font-size: 24px;
+line-height: 32px;
+font-weight: 600;
+line-height: 32px;
+letter-spacing: 0em;
+color: #344563;
+margin-bottom: 24px;
+}
+
+.cards ul {
+  
+  }
+
+.cards ul li {
+  /* max-height: 32px; */
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  padding: 12px;
+  margin: 4px;
+  color: var(--secondary);
+  background: #ffffff;
+  border-radius: 8px;
+}
