--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,10 +8,11 @@
   --primary: #172b4d;
   --h-color: #3a4a42;
   --secondary: #36b37e;
-  --secondary-btn: #36B37F;
+  --secondary-btn: #36b37f;
   --weight: bold;
   --background: #ebf0ee;
   overflow-x: hidden; 
+
 }
 
 body {
@@ -23,6 +24,7 @@ body {
   background-position: center top;
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden; 
+
 }
 
 .main-header {
@@ -82,22 +84,19 @@ main {
 }
 
 .social-media-icons li {
-  padding: 0 20px;
+  padding: 1px 20px;
 }
 
 .scroll-down-icon {
-  margin: 64px 0 22px;
+  margin: 64px 1px 22px;
 }
 
-/* Works section */ 
-
 .works-section {
-  padding: 0 24px;
-  text-align: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-
+  text-align: center;
+  flex-flow: column nowrap;
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 .works-section-title h2 {
@@ -105,11 +104,9 @@ main {
   width: 327;
   margin: 0 auto;
   font-size: 40px;
-  line-height: 52px;
-  font-weight: var(--weight);
   color: var(--primary);
-  /* background-color: brown; */
-  /* margin-bottom: calc(24px + 62px); */
+  font-weight: var(--weight);
+  line-height: 52px;
 }
 
 .works-section-title h2::after {
@@ -127,31 +124,18 @@ main {
   grid-gap: 24px;
   grid-template-columns: repeat(1, 1fr);
   grid-auto-rows: minmax(474px, auto);
-  justify-content: center;
-  align-items: center;
-  /* margin: 0 auto; */
-  /* background-color: rgb(180, 180, 180); */
+  /* justify-content: center; */
 }
 
 .card-container .card {
   min-width: 327px;
-  /* width: 70%; */
-  max-height: 474px;
+  height: 474px;
   border: 1px solid #d0d9d4;
   border-radius: 8px;
   justify-self: center;
-  display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-  /* background-color: #75867f; */
+  display: inline-flex;
   align-items: center;
-}
-
-.card img {
-  background-color: #ebf0ee;
-  background: var(--background);
-  height: 252px;
-  min-width: 100%;
+  flex-flow: column nowrap;
 }
 
 .card h3 {
@@ -168,20 +152,19 @@ main {
   min-width: 100%;
 }
 
-.card ul, .cards ul{
+.card ul, .cards ul {
   width: 100%;
   display: flex;
   align-items: flex-start;
   justify-content: center;
   flex-wrap: wrap;
   text-align: center;
-  list-style: none;
-  /* background-color: #36b37e; */
+  list-style-type: none;
 }
 
 .card ul li {
   max-height: 32px;
-  font-weight:600;
+  font-weight: 600;
   font-size: 12px;
   line-height: 16px;
   border-radius: 4px;
@@ -205,11 +188,8 @@ main {
   background-color: var(--secondary-btn);
 }
 
-/* About myself */ 
-
 .about-section {
-  padding: 0px 0px 59px;
-  /* background: #172b4d; */
+  padding-bottom: 59px;
 }
 
 .about-section .about {
@@ -236,8 +216,7 @@ main {
   background-image: url('../images/Mask\ Group@2x.png');
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: center right;
-
+  background-position: right;
 }
 
 .about p {
@@ -275,16 +254,12 @@ main {
   grid-auto-rows: 352px;
   justify-content: center;
   align-items: center;
-  padding: 0 24px;
-
-  /* text-align: center; */
-  /* margin: 0 auto; */
-  /* background-color: rgb(180, 180, 180); */
+  padding-left: 24px;
+  padding-right: 24px;
 }
 
 .card-wrapper .cards {
-  /* max-width: 327px; */
-  width: 327px;
+  min-width: 327px;
   height: 352px;
   border: 1px solid #c1c7d0;
   border-radius: 8px;
@@ -296,31 +271,21 @@ main {
   justify-content: center;
 }
 
-.cards img {
+.cards .tools-img {
   width: 140px;
-  height: 140px;
-  /* margin: 30px 0 24px; */
-}
-.cards img.first {
-  /* margin: 10px 0 34px; */
+  min-height: 140px;
 }
 
 .cards h3 {
-font-size: 24px;
-line-height: 32px;
-font-weight: 600;
-line-height: 32px;
-letter-spacing: 0em;
-color: #344563;
-margin-bottom: 24px;
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 600;
+  letter-spacing: 0em;
+  color: #344563;
+  margin-bottom: 24px;
 }
 
-.cards ul {
-  
-  }
-
-.cards ul li {
-  /* max-height: 32px; */
+.cards .languages li {
   font-size: 12px;
   font-weight: 600;
   line-height: 16px;
@@ -328,6 +293,6 @@ margin-bottom: 24px;
   padding: 12px;
   margin: 4px;
   color: var(--secondary);
-  background: #ffffff;
+  background: #fff;
   border-radius: 8px;
 }
