--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,7 @@
   --primary: #172b4d;
   --h-color: #3a4a42;
   --secondary: #36b37e;
-  --secondary-btn: #36B37F;
+  --secondary-btn: #36b37f;
   --weight: bold;
   --background: #ebf0ee;
   overflow-x: hidden; 
@@ -86,18 +86,14 @@ main {
 }
 
 .scroll-down-icon {
-  margin: 64px 0 22px;
+  margin: 64px 0px 22px;
 }
 
-/* Works section */ 
-
 .works-section {
-  padding: 0 24px;
-  text-align: center;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-
+  text-align: center;
+  flex-flow: column nowrap;
+  padding: 0px 24px;
 }
 
 .works-section-title h2 {
@@ -105,11 +101,9 @@ main {
   width: 327;
   margin: 0 auto;
   font-size: 40px;
-  line-height: 52px;
-  font-weight: var(--weight);
   color: var(--primary);
-  /* background-color: brown; */
-  /* margin-bottom: calc(24px + 62px); */
+  font-weight: var(--weight);
+  line-height: 52px;
 }
 
 .works-section-title h2::after {
@@ -127,24 +121,18 @@ main {
   grid-gap: 24px;
   grid-template-columns: repeat(1, 1fr);
   grid-auto-rows: minmax(474px, auto);
-  justify-content: center;
-  align-items: center;
-  /* margin: 0 auto; */
-  /* background-color: rgb(180, 180, 180); */
+  /* justify-content: center; */
 }
 
 .card-container .card {
   min-width: 327px;
-  /* width: 70%; */
-  max-height: 474px;
+  height: 474px;
   border: 1px solid #d0d9d4;
   border-radius: 8px;
   justify-self: center;
-  display: flex;
-  flex-direction: column;
-  /* justify-content: center; */
-  /* background-color: #75867f; */
+  display: inline-flex;
   align-items: center;
+  flex-flow: column nowrap;
 }
 
 .card img {
@@ -168,15 +156,14 @@ main {
   min-width: 100%;
 }
 
-.card ul, .cards ul{
+.card ul, .cards ul {
   width: 100%;
   display: flex;
   align-items: flex-start;
   justify-content: center;
   flex-wrap: wrap;
   text-align: center;
-  list-style: none;
-  /* background-color: #36b37e; */
+  list-style-type: none;
 }
 
 .card ul li {
@@ -205,11 +192,8 @@ main {
   background-color: var(--secondary-btn);
 }
 
-/* About myself */ 
-
 .about-section {
-  padding: 0px 0px 59px;
-  /* background: #172b4d; */
+  padding-bottom: 59px;
 }
 
 .about-section .about {
@@ -236,8 +220,7 @@ main {
   background-image: url('../images/Mask\ Group@2x.png');
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: center right;
-
+  background-position: right;
 }
 
 .about p {
@@ -275,16 +258,11 @@ main {
   grid-auto-rows: 352px;
   justify-content: center;
   align-items: center;
-  padding: 0 24px;
-
-  /* text-align: center; */
-  /* margin: 0 auto; */
-  /* background-color: rgb(180, 180, 180); */
+  padding: 0px 24px;
 }
 
 .card-wrapper .cards {
-  /* max-width: 327px; */
-  width: 327px;
+  min-width: 327px;
   height: 352px;
   border: 1px solid #c1c7d0;
   border-radius: 8px;
@@ -296,13 +274,9 @@ main {
   justify-content: center;
 }
 
-.cards img {
+.cards .tools-img  {
   width: 140px;
-  height: 140px;
-  /* margin: 30px 0 24px; */
-}
-.cards img.first {
-  /* margin: 10px 0 34px; */
+  min-height: 140px;
 }
 
 .cards h3 {
@@ -315,12 +289,7 @@ color: #344563;
 margin-bottom: 24px;
 }
 
-.cards ul {
-  
-  }
-
-.cards ul li {
-  /* max-height: 32px; */
+.cards .languages li {
   font-size: 12px;
   font-weight: 600;
   line-height: 16px;
