--- a/CSS/style.css
+++ b/CSS/style.css
@@ -11,8 +11,6 @@
   --secondary-btn: #36b37f;
   --weight: bold;
   --background: #ebf0ee;
-  overflow-x: hidden; 
-
 }
 
 body {
@@ -24,7 +22,6 @@ body {
   background-position: center top;
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden; 
-
 }
 
 .main-header {
@@ -112,7 +109,7 @@ main {
 .works-section-title h2::after {
   content: " ";
   display: block;
-  width: 48px;
+  max-width: 48px;
   height: 4px;
   margin: 24px auto 62px;
   background-color: var(--secondary);
@@ -124,7 +121,6 @@ main {
   grid-gap: 24px;
   grid-template-columns: repeat(1, 1fr);
   grid-auto-rows: minmax(474px, auto);
-  /* justify-content: center; */
 }
 
 .card-container .card {
@@ -152,7 +148,8 @@ main {
   min-width: 100%;
 }
 
-.card ul, .cards ul {
+.card ul,
+.cards ul {
   width: 100%;
   display: flex;
   align-items: flex-start;
@@ -181,8 +178,8 @@ main {
   padding: 12px;
   font-size: 17px;
   line-height: 24px;
-  font-weight: 500;
-  color: #ffffff;
+  font-weight: medium;
+  color: #fff;
   border: none;
   border-radius: 4px;
   background-color: var(--secondary-btn);
@@ -224,10 +221,10 @@ main {
   width: 80%;
   font-size: 20px;
   line-height: 32px;
-  letter-spacing: 0em;
+  letter-spacing: 0.4px;
   font-weight: 400;
   color: #42526e;
-  padding: 0 28px 24px;;
+  padding: 0 28px 24px;
 }
 
 .about button {
@@ -236,7 +233,7 @@ main {
   font-size: 17px;
   line-height: 24px;
   font-weight: 500;
-  color: #ffffff;
+  color: #fff;
   border: none;
   border-radius: 4px;
   background-color: var(--secondary-btn);
@@ -245,7 +242,7 @@ main {
   margin-bottom: 10px;
 }
 
-.card-wrapper{
+.card-wrapper {
   margin-top: 49px;
   display: grid;
   width: auto;
