--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,7 +22,6 @@ body {
   background-position: center top;
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
-
 }
 
 .main-header {
@@ -98,7 +97,7 @@ main {
 }
 
 .works-section-title h2 {
-  max-width: 327;
+  max-width: 70%;
   margin: 0 auto;
   font-size: 40px;
   color: var(--primary);
