--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,6 +13,15 @@
   --background: #ebf0ee;
 }
 
+.d-flex {
+  display: flex;
+}
+
+.flex-center {
+  align-items: center;
+  justify-content: center;
+}
+
 body {
   width: 100%;
   min-height: 100vh;
@@ -25,9 +34,9 @@ body {
 }
 
 .main-header {
-  display: flex;
+  /* display: flex; */
+  /* align-items: center; */
   justify-content: space-between;
-  align-items: center;
   width: 100%;
   min-width: 375px;
   height: calc(48px + 10px);
@@ -43,6 +52,10 @@ nav .menu-btn {
 main {
   max-width: 100%;
   min-height: 100%;
+}
+
+main ul {
+  list-style: none;
 }
 
 .main-section {
@@ -75,9 +88,9 @@ main {
 }
 
 .social-media-icons {
-  display: flex;
-  justify-content: center;
-  list-style: none;
+  /* display: flex;
+  justify-content: center; */
+  /* list-style: none; */
 }
 
 .social-media-icons li {
@@ -89,7 +102,7 @@ main {
 }
 
 .works-section {
-  display: flex;
+  /* display: flex; */
   text-align: center;
   flex-flow: column nowrap;
   padding-left: 24px;
@@ -128,7 +141,7 @@ main {
   border: 1px solid #d0d9d4;
   border-radius: 8px;
   justify-self: center;
-  display: inline-flex;
+  /* display: flex; */
   align-items: center;
   flex-flow: column nowrap;
 }
@@ -150,12 +163,11 @@ main {
 .card ul,
 .cards ul {
   width: 100%;
-  display: flex;
-  align-items: flex-start;
+  /* display: flex; */
   justify-content: center;
+  align-items: flex-start;
   flex-wrap: wrap;
   text-align: center;
-  list-style-type: none;
 }
 
 .card .program-lang li {
@@ -189,10 +201,10 @@ main {
 }
 
 .about-section .about {
-  display: flex;
+  /* display: flex; */
+  /* align-items: center;
+  justify-content: center; */
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   text-align: center;
   width: 100%;
   background-image: url('../images/illustration-\ about\ me-\ mobile@2x.png');
@@ -248,23 +260,24 @@ main {
   grid-gap: 24px;
   grid-template-columns: repeat(1, 1fr);
   grid-auto-rows: 352px;
-  justify-content: center;
-  align-items: center;
+  /* justify-content: center;
+  align-items: center; */
   padding-left: 24px;
   padding-right: 24px;
 }
 
 .card-wrapper .cards {
   max-width: 327px;
+  width: 327px;
   height: 352px;
   border: 1px solid #c1c7d0;
   border-radius: 8px;
   justify-self: center;
-  display: flex;
+  /* display: flex; */
+  /* align-items: center;
+  justify-content: center; */
   flex-direction: column;
-  align-items: center;
   background: var(--background);
-  justify-content: center;
 }
 
 .cards .tools-img {
