--- a/CSS/style.css
+++ b/CSS/style.css
@@ -34,8 +34,6 @@ body {
 }
 
 .main-header {
-  /* display: flex; */
-  /* align-items: center; */
   justify-content: space-between;
   width: 100%;
   min-width: 375px;
@@ -87,12 +85,6 @@ main ul {
   line-height: 28px;
 }
 
-.social-media-icons {
-  /* display: flex;
-  justify-content: center; */
-  /* list-style: none; */
-}
-
 .social-media-icons li {
   padding: 1px 20px;
 }
@@ -102,7 +94,6 @@ main ul {
 }
 
 .works-section {
-  /* display: flex; */
   text-align: center;
   flex-flow: column nowrap;
   padding-left: 24px;
@@ -141,7 +132,6 @@ main ul {
   border: 1px solid #d0d9d4;
   border-radius: 8px;
   justify-self: center;
-  /* display: flex; */
   align-items: center;
   flex-flow: column nowrap;
 }
@@ -163,7 +153,6 @@ main ul {
 .card ul,
 .cards ul {
   width: 100%;
-  /* display: flex; */
   justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
@@ -201,26 +190,20 @@ main ul {
 }
 
 .about-section .about {
-  /* display: flex; */
-  /* align-items: center;
-  justify-content: center; */
   flex-direction: column;
   text-align: center;
   width: 100%;
-  background-image: url('../images/illustration-\ about\ me-\ mobile@2x.png');
+  background-image: url('../images/Group\ 1.png');
   background-repeat: no-repeat;
   background-size: contain;
-  background-position: center left;
+  background-position: center center;
+  padding-top: 68px;
 }
 
 .about h2 {
-  background-image: url('../images/Mask\ Group@2x.png');
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: right;
   min-width: 100%;
   margin: 0 auto;
-  padding: 68px 0 48px;
+  padding-bottom: 48px;
   font-size: 40px;
   line-height: 52px;
   font-weight: var(--weight);
@@ -260,22 +243,16 @@ main ul {
   grid-gap: 24px;
   grid-template-columns: repeat(1, 1fr);
   grid-auto-rows: 352px;
-  /* justify-content: center;
-  align-items: center; */
   padding-left: 24px;
   padding-right: 24px;
 }
 
 .card-wrapper .cards {
   width: 327px;
-  /* max-width: 327px; */
   height: 352px;
   border: 1px solid #c1c7d0;
   border-radius: 8px;
   justify-self: center;
-  /* display: flex; */
-  /* align-items: center;
-  justify-content: center; */
   flex-direction: column;
   background: var(--background);
 }
