--- a/CSS/style.css
+++ b/CSS/style.css
@@ -252,7 +252,6 @@ button:active {
   box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
 }
 
-
 .about button:active,
 .footer-btn:active {
   background-color: #008552;
@@ -336,8 +335,11 @@ textarea {
   width: 100%;
 }
 
-.footer {
-  
+.body {
+  background-image: url("../images/Frame@2x.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center center;
 }
 
 .footer-btn {
