--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,6 +23,13 @@
   justify-content: center;
 }
 
+.h2-size {
+  color: var(--primary);
+  font-size: 40px;
+  font-weight: var(--weight);
+  line-height: 52px;
+}
+
 body {
   width: 100%;
   min-height: 100vh;
@@ -74,9 +81,6 @@ ul {
 
 .main-section-title h2 {
   color: var(--secondary);
-  font-size: 44px;
-  font-weight: var(--weight);
-  line-height: 54px;
 }
 
 .main-section p {
@@ -104,10 +108,6 @@ ul {
 .works-section-title h2 {
   max-width: 70%;
   margin: 0 auto;
-  font-size: 40px;
-  color: var(--primary);
-  font-weight: var(--weight);
-  line-height: 52px;
 }
 
 .works-section-title h2::after {
@@ -121,7 +121,7 @@ ul {
 
 .card-container {
   display: grid;
-  width: auto;
+  width: 100%;
   grid-gap: 24px;
   grid-template-columns: repeat(1, 1fr);
   grid-auto-rows: minmax(474px, auto);
@@ -188,6 +188,7 @@ ul {
 
 button:hover {
   background-color: var(--secondary-btn);
+  box-shadow: 10px 8px 16px rgba(54, 179, 127, 0.24);
 }
 
 button:active {
@@ -201,22 +202,19 @@ button:active {
 .about-section .about {
   flex-direction: column;
   text-align: center;
-  width: 99%;
+  width: 100%;
   background-image: url("../images/Group\ 1.png");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 100%;
   background-position: center center;
-  padding-top: 68px;
+  padding-top:calc(68px + 15px);
+  padding-bottom: 15px;
 }
 
 .about h2 {
   min-width: 99%;
   margin: 0 auto;
   padding-bottom: 48px;
-  font-size: 40px;
-  line-height: 52px;
-  font-weight: var(--weight);
-  color: var(--primary);
 }
 
 .about p {
@@ -231,7 +229,7 @@ button:active {
 }
 
 .about button,
-.footer-btn {
+.contact-form-section button {
   height: 48px;
   width: 159px;
   font-size: 17px;
@@ -246,19 +244,12 @@ button:active {
   margin-bottom: 10px;
 }
 
-.about button:hover,
-.footer-btn:hover {
-  background: #36b37f;
-  box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
-}
-
-.about button:active,
-.footer-btn:active {
+.about button:active {
   background-color: #008552;
 }
 
 .card-wrapper {
-  margin-top: 49px;
+  margin-top: 39px;
   display: grid;
   width: auto;
   grid-gap: 24px;
@@ -304,6 +295,13 @@ button:active {
   border-radius: 8px;
 }
 
+footer {
+  background-image: url("../images/illustration-contact-form@2x.png");
+  background-repeat: no-repeat;
+  background-size: 10%;
+  background-position: right 78%;
+}
+
 .contact-form-section {
   flex-direction: column;
   justify-content: space-around;
@@ -311,41 +309,57 @@ button:active {
 }
 
 .form-sub-container {
-  width: 327px;
+  width: 80%;
 }
 
 .contact-form-section h2 {
   width: 100%;
   padding: 0 0 58px;
-  color: var(--primary);
-  font-weight: var(--weight);
-  font-size: 40px;
-  line-height: 52px;
-}
-.contact-form-section input {
-  height: 2em;
 }
 
-.contact-form-section input,
-textarea {
-  margin-bottom: 1em;
+.contact-form-section input {
+  margin-bottom: 24px;
   border: 1px solid #d0d9d4;
   border-radius: 4px;
-  padding-left: 0.5em;
+  padding: 15px 16px;
   width: 100%;
 }
 
-.body {
-  background-image: url("../images/Frame@2x.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center center;
+.contact-form-section textarea {
+  margin-bottom: 24px;
+  border: 1px solid #60c095;
+  border-radius: 4px;
+  padding: 12px;
+  width: 100%;
 }
 
-.footer-btn {
-  margin-bottom: 3em;
+
+footer .social-media-icons {
+  margin: 46px 0 19px;
 }
 
-.mail-container {
-  margin: 3em 0;
+footer .mail-container {
+  margin-bottom: 147px;
+
 }
+
+footer .mail-container a {
+  margin: 3em 0 147px;
+  color: #42526e;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  letter-spacing: 0em;
+}
+
+.form-sub-container::after {
+  content: " ";
+  display: block;
+  width: 128px;
+  height: 5px;
+  border-radius: 2px;
+  margin: 0 auto 10px;
+  background: var(--primary);
+}
+
