--- a/CSS/style.css
+++ b/CSS/style.css
@@ -184,6 +184,7 @@ ul {
   border: none;
   border-radius: 4px;
   background-color: var(--secondary-btn);
+  cursor: pointer;
 }
 
 button:hover {
@@ -242,6 +243,7 @@ button:active {
   letter-spacing: 0.03em;
   padding: 12px;
   margin-bottom: 10px;
+  cursor: pointer;
 }
 
 .about button:active {
