--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;600;800&display=swap');
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -37,16 +39,20 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center top;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Inter', sans-serif;
   overflow-x: hidden;
 }
 
-.main-header {
+header {
   justify-content: space-between;
   width: 100%;
   min-width: 375px;
   height: calc(48px + 10px);
   padding: 24px;
+}
+
+nav .nav-menu{
+  display: none;
 }
 
 nav .menu-btn {
@@ -308,7 +314,10 @@ section.contact-form-section {
 }
 
 .form-sub-container {
-  width: 80%;
+  /* width: 327px; */
+  min-width: 307px;
+  max-width: 70%;
+  
 }
 
 .contact-form-section h2 {
@@ -359,4 +368,95 @@ footer::after {
   border-radius: 2px;
   margin: 0 auto 10px;
   background: var(--primary);
+}
+
+@media (min-width: 768px) {
+  header {
+    justify-content: center;
+    padding: 24px;
+    height: auto;
+    /* background-color: #008552; */
+  }
+
+  header h2,
+  nav .menu-btn {
+    display: none;
+  }
+  
+  nav .nav-menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  nav .nav-menu li {
+    padding: 5px 15px;
+    margin: 5px 10px;
+    font-size: 16px;
+    /* background-color: #60c095; */
+  }
+
+  .main-section-title h1{
+    font-size: 48px;
+    font-weight: 800;
+    line-height: 60px;
+    letter-spacing: 0.4px;
+  }
+  
+  .main-section-title h2 {
+    font-size: 48px;
+    font-weight: 800;
+    line-height: 60px;
+    letter-spacing: 0.8px;
+    margin-top: 5px;
+  }
+
+  .main-section p {
+    /* margin: 24px 0 0; */
+    letter-spacing: 0.8px;
+  }
+
+    
+}
+
+@media (min-width: 992px) {
+  body {
+    width: 100%;
+    min-height: 100vh;
+    background-image: url("../images/Header-llustration-desktop@2x.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center top;
+    font-family: 'Inter', sans-serif;
+    overflow-x: hidden;
+  }
+
+  .main-section {
+    padding: 140px 24px 0;
+  }
+
+  .main-section p {
+    margin: 24px 0 0;
+
+  }
+  
+  .social-media-icons li {
+    padding: 1px 20px;
+  }
+  
+  .scroll-down-icon {
+    margin: 64px 1px 311px;
+  }
+  
+ 
+}
+
+@media (min-width: 1200px) {
+  body {
+    /* background: red; */
+  }
+
+  .scroll-down-icon {
+    margin-top: calc(311px+184);
+  }
 }
