Style the portfolio to be adapted on medium devices

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,19 +35,14 @@
 body {
   width: 100%;
   min-height: 100vh;
-  background-image: url("../images/header-illsutration-mobile@2x.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center top;
   font-family: 'Inter', sans-serif;
   overflow-x: hidden;
 }
 
 header {
   justify-content: space-between;
+  align-items: center;
   width: 100%;
-  min-width: 375px;
-  height: calc(48px + 10px);
   padding: 24px;
 }
 
@@ -71,18 +66,14 @@ ul {
 }
 
 .main-section {
-  min-width: 327px;
-  max-width: 920px;
+  background-image: url("../images/header-illsutration-mobile@2x.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top;
+  width: 100%;
   margin: 0 auto;
   text-align: center;
   padding: 64px 24px 0;
-}
-
-.main-section-title h1 {
-  color: var(--primary);
-  font-size: 44px;
-  font-weight: var(--weight);
-  line-height: 54px;
 }
 
 .main-section-title h2 {
@@ -90,18 +81,19 @@ ul {
 }
 
 .main-section p {
-  margin: 58px 0 60px;
+  max-width: 90%;
+  margin: 58px auto 60px;
   color: var(--primary);
   font-size: 20px;
   line-height: 28px;
 }
 
 .social-media-icons li {
-  padding: 1px 20px;
+  padding: 0 20px;
 }
 
 .scroll-down-icon {
-  margin: 64px 1px 22px;
+  margin: 64px 0 22px;
 }
 
 .works-section {
@@ -128,13 +120,14 @@ ul {
 .card-container {
   display: grid;
   width: 100%;
-  grid-gap: 24px;
   grid-template-columns: repeat(1, 1fr);
-  grid-auto-rows: minmax(474px, auto);
+  grid-gap: 24px;
+  grid-auto-rows: 474px;
+  text-align: center;
 }
 
 .card-container .card {
-  min-width: 327px;
+  width: 327px;
   height: 474px;
   border: 1px solid #d0d9d4;
   border-radius: 8px;
@@ -153,7 +146,7 @@ ul {
 
 .card img {
   background: var(--background);
-  height: 252px;
+  height: 250px;
   min-width: 100%;
 }
 
@@ -167,7 +160,6 @@ ul {
 }
 
 .card .program-lang li {
-  height: 32px;
   font-weight: 600;
   font-size: 12px;
   line-height: 16px;
@@ -179,9 +171,8 @@ ul {
 }
 
 .card button {
-  margin: 29px 0 24px;
+  margin: 24px 0 20px;
   height: 48px;
-  width: 122px;
   padding: 12px;
   font-size: 17px;
   line-height: 24px;
@@ -203,36 +194,33 @@ button:active {
 }
 
 .about-section {
-  padding-bottom: 59px;
+  background: url("../images/illustration\ 2-about\ me\ mobile@2x.png") left 21% no-repeat, url("../images/illustration\ 1-\ about\ me-mobile@2x.png")  right 2%  no-repeat;
+  background-size: 13%;
+  padding-bottom: 60px;
+  /* width: 100%; */
+  /* min-width: 351px; */
 }
 
 .about-section .about {
   flex-direction: column;
   text-align: center;
   width: 100%;
-  background-image: url("../images/Group\ 1.png");
-  background-repeat: no-repeat;
-  background-size: 100%;
-  background-position: center center;
-  padding-top: calc(68px + 15px);
-  padding-bottom: 15px;
+  padding: calc(68px + 15px) 24px 15px;
 }
 
 .about h2 {
-  min-width: 99%;
   margin: 0 auto;
-  padding-bottom: 48px;
+  padding-bottom: 24px;
 }
 
 .about p {
-  min-width: 351px;
-  width: 80%;
+  width: 90%;
   font-size: 20px;
   line-height: 32px;
   letter-spacing: 0.4px;
   font-weight: 400;
   color: #42526e;
-  padding: 0 28px 24px;
+  padding: 0 24px 24px;
 }
 
 .about button,
@@ -257,14 +245,13 @@ button:active {
 }
 
 .card-wrapper {
+  width: 100%;
   margin-top: 39px;
   display: grid;
-  width: auto;
   grid-gap: 24px;
   grid-template-columns: repeat(1, 1fr);
   grid-auto-rows: 352px;
-  padding-left: 24px;
-  padding-right: 24px;
+  text-align: center;
 }
 
 .card-wrapper .cards {
@@ -314,10 +301,8 @@ section.contact-form-section {
 }
 
 .form-sub-container {
-  /* width: 327px; */
   min-width: 307px;
-  max-width: 70%;
-  
+  max-width: 80%;
 }
 
 .contact-form-section h2 {
@@ -331,6 +316,7 @@ section.contact-form-section {
   border-radius: 4px;
   padding: 15px 16px;
   width: 100%;
+  font-size: 16px;
 }
 
 .contact-form-section textarea {
@@ -339,10 +325,12 @@ section.contact-form-section {
   border-radius: 4px;
   padding: 12px;
   width: 100%;
+  font-size: 16px;
 }
 
-.icons-container .social-media-icons {
-  margin: 46px 0 19px;
+.footer-icons {
+  width: 100%;
+  padding: 46px 0 19px;
 }
 
 footer .mail-container {
@@ -370,93 +358,33 @@ footer::after {
   background: var(--primary);
 }
 
-@media (min-width: 768px) {
-  header {
-    justify-content: center;
-    padding: 24px;
-    height: auto;
-    /* background-color: #008552; */
-  }
-
-  header h2,
-  nav .menu-btn {
-    display: none;
-  }
-  
-  nav .nav-menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  nav .nav-menu li {
-    padding: 5px 15px;
-    margin: 5px 10px;
-    font-size: 16px;
-    /* background-color: #60c095; */
-  }
-
-  .main-section-title h1{
+@media screen and (min-width: 640px) {
+  .main-section-title h1,
+  .main-section-title h2 {
     font-size: 48px;
     font-weight: 800;
     line-height: 60px;
     letter-spacing: 0.4px;
   }
-  
-  .main-section-title h2 {
-    font-size: 48px;
-    font-weight: 800;
-    line-height: 60px;
-    letter-spacing: 0.8px;
-    margin-top: 5px;
-  }
 
   .main-section p {
-    /* margin: 24px 0 0; */
+    max-width: 900px;
     letter-spacing: 0.8px;
   }
+  
+  .card-container .card,
+  .card-wrapper .cards {
+    width: 369px;
+  }
+  .card-wrapper {
+    padding: 0 24px;
 
-    
+  }
+
 }
 
-@media (min-width: 992px) {
-  body {
-    width: 100%;
-    min-height: 100vh;
-    background-image: url("../images/Header-llustration-desktop@2x.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center top;
-    font-family: 'Inter', sans-serif;
-    overflow-x: hidden;
-  }
 
-  .main-section {
-    padding: 140px 24px 0;
-  }
 
-  .main-section p {
-    margin: 24px 0 0;
 
-  }
   
-  .social-media-icons li {
-    padding: 1px 20px;
-  }
-  
-  .scroll-down-icon {
-    margin: 64px 1px 311px;
-  }
-  
- 
-}
 
-@media (min-width: 1200px) {
-  body {
-    /* background: red; */
-  }
-
-  .scroll-down-icon {
-    margin-top: calc(311px+184);
-  }
-}
