--- a/CSS/style.css
+++ b/CSS/style.css
@@ -383,7 +383,131 @@ footer::after {
 
 }
 
+@media screen and (min-width: 768px) {
+  header {
+    position: fixed;
+    left: 0;
+    right: 0;
+    justify-content: center;
+    background-color: #fff;
+    z-index: 1;
+  }
 
+  header h2,
+  nav .menu-btn {
+    display: none;
+  }
+   
+  nav .nav-menu{
+    display: flex;
+    justify-self: center;
+  }
+
+  .nav-menu li a{
+    display: flex;
+    justify-self: center;
+    padding: 5px 15px;
+    margin: 3px;
+    font-size: 16px;
+    color: var(--primary);
+    font-weight: 500;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  main {
+    position: relative;
+    padding-bottom: 58px;
+  }
+
+  .main-section {
+    padding-top: 180px;
+    margin-top: 32px;
+    background-image: url("../images/Header-llustration-desktop@2x.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+  }
+
+  .main-section p {
+    width: 70%;
+    margin: 24px auto;
+  }
+  
+  .social-media-icons li {
+    padding: 0 20px;
+  }
+
+  .works-section-title h2 {
+    padding: 40px 0 32px;
+  }
+
+  .works-section-title h2::after {
+    display: none;
+  }
+  
+  .scroll-down-icon {
+    margin: 64px 0px 245px;
+  }
+
+  .card-container,
+  .card-wrapper {
+    width: calc(654px + 24px);
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 24px;
+    margin: 0 auto;
+    text-align: center;
+    /* grid-row: auto; */
+  }
+  
+  .card-container .card,
+  .card-wrapper .cards {
+    width: 327px;
+    align-self: center;
+    justify-self: center;
+    justify-self: center;
+  }
+
+  .card-wrapper .cards:last-child {
+    grid-column: 1/span 2;
+  }
+
+  .about-section {
+    background-color: none;
+    background: url("../images/illustration-about-me-2-desktop@2x.png") left 17% no-repeat, url("../images/illustration-about\ me-1-desktop@2x.png") right 3%  no-repeat;
+    background-size: 15%;
+    padding-bottom: 164px;
+  }
+
+  .about-section .about { 
+    width: 85%;
+    margin: 0 auto;
+  }
+  
+  .form-sub-container {
+    max-width: 80%;
+  }
+
+  footer {
+    display: none;
+  }
+
+  .footer-icons ul {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 58px;
+    padding: 0px;
+    margin: 0;
+    padding-top: 5px;
+    border-top: 1px solid #dfe1e6;
+  }
+
+  .footer-icons ul li {
+    padding: 0 12px;
+  }
+}
 
 
   
