--- a/CSS/style.css
+++ b/CSS/style.css
@@ -46,7 +46,7 @@ header {
   padding: 24px;
 }
 
-nav .nav-menu{
+nav .nav-menu {
   display: none;
 }
 
@@ -197,8 +197,6 @@ button:active {
   background: url("../images/illustration\ 2-about\ me\ mobile@2x.png") left 21% no-repeat, url("../images/illustration\ 1-\ about\ me-mobile@2x.png")  right 2%  no-repeat;
   background-size: 13%;
   padding-bottom: 60px;
-  /* width: 100%; */
-  /* min-width: 351px; */
 }
 
 .about-section .about {
@@ -396,13 +394,13 @@ footer::after {
   nav .menu-btn {
     display: none;
   }
-   
-  nav .nav-menu{
+  
+  nav .nav-menu {
     display: flex;
     justify-self: center;
   }
 
-  .nav-menu li a{
+  .nav-menu li a {
     display: flex;
     justify-self: center;
     padding: 5px 15px;
@@ -413,7 +411,7 @@ footer::after {
     text-decoration: none;
     cursor: pointer;
   }
-  
+
   main {
     position: relative;
     padding-bottom: 58px;
@@ -446,7 +444,7 @@ footer::after {
   }
   
   .scroll-down-icon {
-    margin: 64px 0px 245px;
+    margin: 64px 0 245px;
   }
 
   .card-container,
@@ -456,14 +454,12 @@ footer::after {
     grid-gap: 24px;
     margin: 0 auto;
     text-align: center;
-    /* grid-row: auto; */
   }
   
   .card-container .card,
   .card-wrapper .cards {
     width: 327px;
     align-self: center;
-    justify-self: center;
     justify-self: center;
   }
 
@@ -472,13 +468,14 @@ footer::after {
   }
 
   .about-section {
-    background-color: none;
-    background: url("../images/illustration-about-me-2-desktop@2x.png") left 17% no-repeat, url("../images/illustration-about\ me-1-desktop@2x.png") right 3%  no-repeat;
+    background: none;
+    background: url("../images/illustration-about-me-2-desktop@2x.png") left 17% no-repeat,
+     url("../images/illustration-about\ me-1-desktop@2x.png") right 3%  no-repeat;
     background-size: 15%;
     padding-bottom: 164px;
   }
-
-  .about-section .about { 
+  
+  .about-section .about {
     width: 85%;
     margin: 0 auto;
   }
@@ -497,7 +494,7 @@ footer::after {
     left: 0;
     right: 0;
     height: 58px;
-    padding: 0px;
+    padding: 0;
     margin: 0;
     padding-top: 5px;
     border-top: 1px solid #dfe1e6;
@@ -508,7 +505,7 @@ footer::after {
   }
 }
 
-@media screen and (min-width: 992px) {  
+@media screen and (min-width: 992px) {
   .card-container,
   .card-wrapper {
     width: calc(738px + 24px);
@@ -520,12 +517,13 @@ footer::after {
   }
 
   .about-section {
-    background-color: none;
-    background: url("../images/illustration-about-me-2-desktop@2x.png") left 17% no-repeat, url("../images/illustration-about\ me-1-desktop@2x.png") right 3%  no-repeat;
+    background: none;
+    background: url("../images/illustration-about-me-2-desktop@2x.png") left 17% no-repeat,
+     url("../images/illustration-about\ me-1-desktop@2x.png") right 3%  no-repeat;
     background-size: 15%;
     padding-bottom: 164px;
   }
-
+  
   .about-section .about { 
     width: 85%;
     margin: 0 auto;
@@ -535,9 +533,10 @@ footer::after {
 
   section.contact-form-section {
     background-image: none;
-    background: url("../images/illustration-1-contact-form-desktop@2x.png") left bottom no-repeat,
-    url("../images/illustration-2-contact-form-desktop@2x.png") 30% bottom  no-repeat,
-    url("../images/contact\ form-illustratoin-3-desktop@2x.png") right bottom  no-repeat;
+    background:
+     url("../images/illustration-1-contact-form-desktop@2x.png") left bottom no-repeat,
+     url("../images/illustration-2-contact-form-desktop@2x.png") 30% bottom  no-repeat,
+     url("../images/contact\ form-illustratoin-3-desktop@2x.png") right bottom  no-repeat;
     background-size: 14%;
   }
 
@@ -556,11 +555,12 @@ footer::after {
     line-height: 48px;
     margin-right: 24px;
   }
+
   .contact-form-section form {
     width: 684px;
   }
 }
-  
+
 @media screen and (min-width: 1200px) {
   .card-container,
   .card-wrapper {
@@ -575,7 +575,7 @@ footer::after {
     width: 327px;
     margin: 0 auto;
   }
-    
+
   .card-wrapper .cards:last-child {
     grid-column: 3/span 1;
   }
