--- a/CSS/style.css
+++ b/CSS/style.css
@@ -92,6 +92,14 @@ ul {
   padding: 0 20px;
 }
 
+.social-media-icons li a img {
+  transition: all 1s ease;
+}
+
+.social-media-icons li a img:hover {
+  transform: scale(1.2);
+}
+
 .scroll-down-icon {
   margin: 64px 0 22px;
 }
@@ -192,6 +200,7 @@ ul {
 button:hover {
   background-color: var(--secondary-btn);
   box-shadow: 10px 8px 16px rgba(54, 179, 127, 0.24);
+  transform: translatey(-18px);
 }
 
 button:active {
