--- a/CSS/style.css
+++ b/CSS/style.css
@@ -488,7 +488,7 @@ footer::after {
     transition: all 0.5s ease-in-out;
   }
 
-  .nav-menu .nav-link:first-child a {
+  .nav-menu .nav-link:last-child a {
     color: #008552;
   }
 
