--- a/CSS/style.css
+++ b/CSS/style.css
@@ -50,10 +50,31 @@ nav .nav-menu {
   display: none;
 }
 
+nav .nav-menu.open {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+}
+
 nav .menu-btn {
   width: 22px;
   height: 16px;
   font-weight: var(--weight);
+}
+
+nav .closed-menu-btn {
+  display: none;
+  position: absolute;
+  top: 12px;
+  right: 24px;
+  z-index: 3;
 }
 
 main {
