--- a/CSS/style.css
+++ b/CSS/style.css
@@ -53,6 +53,7 @@ nav .nav-menu {
 nav .nav-menu.open {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
   position: fixed;
   top: 0;
   left: 0;
@@ -60,7 +61,20 @@ nav .nav-menu.open {
   z-index: 2;
   width: 100%;
   height: 100%;
+  padding-left: 28px;
   background-color: #fff;
+}
+
+nav .nav-menu.open li {
+  font-size: 32px;
+  line-height: 44px;
+  font-weight: 600;
+  margin: 12px;
+}
+
+nav .nav-menu.open li a {
+  text-decoration: none;
+  color: var(--h-color);
 }
 
 nav .menu-btn {
@@ -71,8 +85,8 @@ nav .menu-btn {
 
 nav .closed-menu-btn {
   display: none;
-  position: absolute;
-  top: 12px;
+  position: fixed;
+  top: 24px;
   right: 24px;
   z-index: 3;
 }
