--- a/CSS/style.css
+++ b/CSS/style.css
@@ -182,6 +182,7 @@ ul {
   width: 96%;
   height: 96%;
   margin-top: 1.5%;
+  border-radius: 4px;
   opacity: 0.7;
   transition: all 0.4s ease-in-out;
 }
